# urfu-mv-lab

./: .gitmodules  CMakeLists.txt
src/core/: compiler_version.cpp  compiler_version.h  lyssa.cpp  lyssa.h  platform.cpp  platform.h  settings.cpp  settings.h  variable.cpp  variable.h  version.cpp  version.h
src/gui/: gui.cpp  gui.h  window.cpp  window.h  window_about.cpp  window_about.h  window_cv.cpp  window_cv.h  window_imgui_features.cpp  window_imgui_features.h  window_settings.cpp  window_settings.h
src/io/: logger.cpp  logger.h
src/time/: current_time.cpp  current_time.h  execution_time.cpp  execution_time.h  wait_time.cpp  wait_time.h
